<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activities.AboutAppActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/logo_settings_IV"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_below="@id/settings_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:src="@mipmap/scanit_icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/app_name_CV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_settings_IV"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/app_version_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_CV">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/version_1_0"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/darkmode_CV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_version_cv"
        android:layout_marginTop="10dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6CECE"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/dark_mode"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/app_market_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/darkmode_CV"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/news_market_republic_of_india"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/future_feature_CV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_market_cv"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/new_features_coming_soon_in_an_update"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/future_feature_CV"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/trending_news_gets_updated_every_hour_automatically"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/made_in_india"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>
